@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: October 13, 2009</p>
+      <p>Last Updated: October 14, 2009</p>
     </td>
   </tr>
 </table>
@@ -1610,6 +1610,8 @@ nuttx-0.4.12 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	  cannot be used for the full NuttX bring-up).
 	* configs/stm3210e-eval/ostest.  The STM32 now passes the basic NuttX OS test
 	  at examples/ostest.  The rest should be a piece of cake.
+	* configs/stm3210e-eval/nsh.  Added NuttShell (NSH) example.
+	* configs/stm3210e-eval/src/stm32102e-internal.h.  Fix on-board LED GPIO definitions.
 
 	  STM32: Things left to do:  interrupt driver USART console driver, NSH bring-up,
 	  USB driver, LCD driver and NX bringup on the eval board's display, SPI driver,
